--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,9 +13,12 @@
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.0",
+    "react-spinners": "^0.16.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.4"
   },
